--- a/main.css
+++ b/main.css
@@ -3,35 +3,52 @@ body,html{
     margin:0 auto;
 }   
 .section1{
-    background: url(../img/joker.png);
+    background: url(../img/rain-wallpaper-hd-1.jpg);
+    background-size: 1500px;
+    background-position: bottom;
     width: 100%;
     height: 100%;
     text-align: center;
+    margin-top: 50px;
+    padding: 100px;
 }
 .judul{
-    font-family: cursive;
-    font-size: 70px;
-    color: brown;
+    font-family: inherit;
+    font-size: 50px;
+    color:snow;
+    font-weight: bold;
 }
 .sub-judul{
-    font-family: fantasy;
-    font-size: 30px;
-    color: maroon;
+    font-family: inherit;
+    font-size: 50px;
+    color: black;
+    font-weight: bold;
 }
 .section2{
-    padding:100px 0px;
-    background: #020016;
-}
-.col-kiri{
-    background: #C6FF6B;
+    padding:130px 0px;
+    background: #258D2F;
 }
 .col-kanan{
-    background: #E8610C;
+    background: lightblue;
+    font-family: sans-serif;
+    font-size: 20px;
+    color: black;
+    padding: 20px 0px;
+}
+.col-kiri{
+    background: #ffffff;
+    font-size: 20px;
+    padding: 100px 10px;
+    text-align: center;
 }
 .section3{
     min-height: 300px;
-    padding: 50px 0px;
-    background:  #ffffff;
+    padding: 130px 0px;
+    background:  #22A84E;
+}
+.section4{
+    background: #0C8351;
+    color: snow
 }
 .link{
     padding: 10px 15px;
